# filecrypter

./: Cargo.toml  README.md
src/: crypt.rs  file.rs  interactive.rs  key.rs  main.rs
src/ui/: cli.rs  messages.rs  mod.rs
